--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ waitress = "^1.4.3"
 pytest = "^5.4.2"
 mypy = "^0.770"
 wemake-python-styleguide = "^0.14.0"
+typing_extensions = "^3.7.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
