Initialize tickers endpoint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ Werkzeug = "0.16.1"
 wemake-python-styleguide = "^0.14.0"
 python-dotenv = "^0.13.0"
 waitress = "^1.4.3"
+Flask-SQLAlchemy = "^2.4.1"
+pymongo = "^3.10.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.2"
