--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,6 @@
 FLASK_APP=stocks:create_app()
 FLASK_CONFIG=stocks.config.Config
+AUTH_IMPORT_TOKEN=long-secret-import-token
 
 # Use your own mongodb instance or simply run it inside docker container: 
 # docker run -p 27017:27017 -e MONGO_INITDB_ROOT_USERNAME=user -e MONGO_INITDB_ROOT_PASSWORD=password mongo:3.6.11
