--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest = "^5.4.2"
 mypy = "^0.770"
 wemake-python-styleguide = "^0.14.0"
 typing_extensions = "^3.7.4"
+isort = "^4.3.21"
 
 [build-system]
 requires = ["poetry>=0.12"]
