--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ authors = ["Vadim Ryazanov <vadimvoronezh@yandex.ru>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-flask-restplus = "^0.13.0"
 flask = "^1.1.2"
 Werkzeug = "0.16.1"
 wemake-python-styleguide = "^0.14.0"
@@ -14,6 +13,7 @@ python-dotenv = "^0.13.0"
 waitress = "^1.4.3"
 Flask-SQLAlchemy = "^2.4.1"
 pymongo = "^3.10.1"
+flask-restx = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.2"
