--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ waitress = "^1.4.3"
 Flask-SQLAlchemy = "^2.4.1"
 pymongo = "^3.10.1"
 flask-restx = "^0.2.0"
+dependencies = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.2"
