--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ Flask-SQLAlchemy = "^2.4.1"
 pymongo = "^3.10.1"
 flask-restx = "^0.2.0"
 dependencies = "^2.0.0"
+bravado = "^10.6.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.2"
