--- a/setup.cfg
+++ b/setup.cfg
@@ -20,21 +20,13 @@ addopts =
   --doctest-modules
 
 [mypy]
-allow_redefinition = False
-check_untyped_defs = True
-disallow_untyped_decorators = True
-disallow_any_explicit = True
-disallow_any_generics = True
-disallow_untyped_calls = True
-ignore_errors = False
-ignore_missing_imports = True
-implicit_reexport = False
-local_partial_types = True
+follow_imports = silent
 strict_optional = True
-strict_equality = True
-no_implicit_optional = True
-warn_unused_ignores = True
 warn_redundant_casts = True
-warn_unused_configs = True
-warn_unreachable = True
-warn_no_return = True
+warn_unused_ignores = True
+disallow_any_generics = True
+check_untyped_defs = True
+ignore_missing_imports = True
+disallow_untyped_defs = True
+strict_equality = True
+plugins = sqlmypy,pydantic.mypy
