--- a/.env.dist
+++ b/.env.dist
@@ -1,8 +1,3 @@
-FLASK_APP=stocks:create_app()
-FLASK_CONFIG=stocks.config.Config
+PORT=8000
 AUTH_IMPORT_TOKEN=long-secret-import-token
-
-# Use your own mongodb instance or simply run it inside docker container: 
-# docker run -p 27017:27017 -e MONGO_INITDB_ROOT_USERNAME=user -e MONGO_INITDB_ROOT_PASSWORD=password mongo:3.6.11
-# and then set MONGODB_URI=mongodb://user:password@localhost:27017/admin
-MONGODB_URI=
+SQLALCHEMY_URI=postgresql+psycopg2://api:api@db/api
