--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ doctests = True
 ignore = WPS, B008
 
 [isort]
-include_trailing_comma = true
+include_trailing_comma = false
 lines_after_imports = 2
 line_length = 80
 
